--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,6 @@
-<div>
+<h1> Student Index Page </h1>
+<ul>
   <% @students.each do |student| %>
-    <div><%= student.first_name + " " + student.last_name %></div>
+    <li> <%= link_to "#{student.first_name + ' ' + student.last_name}", student %></li>
   <% end %>
-</div>
+</ul>
